--- a/index.html
+++ b/index.html
@@ -446,8 +446,17 @@
     </main>
 
     <!-- footer-- -->
-    <footer>
-      <section class="container-fluid gap-my-5">
+    <footer class="mb-0">
+      <section class="container-fluid gap-my-5 bg-dark mb-0 p-5" style="height:40vh ;">
+          <div class="d-flex flex-column justify-content-center align-items-center ">
+            <h1 class="fw-bold text-light"><span class="text-info">We</span>Bot</h1>
+            <p  class="text-light">Office 41, Zawaya Buildin, Ghala Muscat, </p>   
+            <p class="text-light">Sultanate of Oman</p>
+            <p class="text-light">Privacy Ploicy | Terms of use</p>
+          </div>
+          <div>
+            
+          </div>
 
       </section>
     </footer>
