--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
         <!-- Explore T.e.I end -->
 
         <!-- modal text #register-->
-        <section class="container bg-primary gap-my-5 rounded-3" id="register" >
+        <section class="container bg-primary-light gap-my-5 rounded-3" id="register" >
           
             <div class="row d-flex justify-content-between align-items-center " >
 
