--- a/index.html
+++ b/index.html
@@ -107,10 +107,9 @@
         <!-- --#Courses-- -->
         <section class="container gap-my-5" id="courses">
           <div class="d-flex flex-column justify-content-center align-items-center ">
-            <h1 class="fw-bold">Discover Our Popular </h1>
-            <h1 class="fw-bold">Courses</h1>
-            <p>It is a long established fact that a reader will be distracted by the readable </p>   
-            <p>content of a page when looking at its layout</p>
+            <h1 class="fw-bold">Discover Our Popular Courses</h1>
+            
+            <p>It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout</p>
           </div>
           
           <div class="row d-flex justify-content-between my-4 ">
@@ -354,7 +353,7 @@
             </div>
           </div>
           <div class="d-grid gap-2 col-lg-2 col-md-4 col-sm-6 mx-auto">
-              <button class="btn btn-primary py-4 px-5 my-4 fw-bold" type="button">View All</button>
+              <button class="btn btn-primary py-2 px-3 my-4 fw-bold" type="button">View All</button>
           </div>
         </section>
         <!-- success students end -->
